conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: not found: value vrai
if (estFaceMur==vrai){
                ^