conditions.Conditions.scala.code
if (estFaceMur==vrai){
  avance()
}
else{
  recule()
}